# image-db-app

./: .dockerignore  .env  .gitignore  .python-version  Dockerfile  README.md  README.org  deploy_fargate.sh  fg-deploy-np.js  pyproject.toml
app/: __init__.py  batch_loader.py  config.py  dev.py  dummy_db.py  exceptions.py  extensions.py  item.py  models.py  parser.py  prod.py  schema.py  test.py  utils.py
app/api/: __init__.py
app/api/v1/: __init__.py  cell.py  compound.py  compound_props.py  identity.py  item.py  items.py  items_.py  modality.py  plate.py  section.py  stack.py  tag.py  timepoint.py  utils.py
app/models/: __init__.py  cell.py  compound.py  item.py  mixins.py  modality.py  plate.py  section.py  stack.py  timepoint.py  utils.py
app/pages/: index.md  tutorial.md
app/reader/: __init__.py  base.py  s3.py  test.py
app/schemas/: __init__.py  cell.py  compound.py  item.py  modality.py  plate.py  section.py  stack.py  timepoint.py
app/static/assets/: package.json
app/templates/: browse.html  flatpage.html  swagger_ui.html
app/templates/detail/: generic.html  image.html  item.html
app/templates/includes/: navigation.html
app/templates/layouts/: base-fullscreen.html  base.html
app/templates/overview/: compounds.html  generic.html
app/views/: __init__.py  compound.py  image.py  index.py  plate.py  remote_item.py  stack.py
scratch/: add_item_chan.py  build_prop_tree.py  set_chan_assoc.py
src/: __init__.py  config.py  dummy_db.py
src/api/v1/: cell.py  compound.py  items.py  modality.py  plate.py  section.py  stack.py  tag.py
src/models/: __init__.py  cell.py  compound.py  item.py  modality.py  plate.py  section.py  stack.py  timepoint.py
src/reader/: base.py  s3.py  test.py
src/templates/includes/: footer.html
src/templates/overview/: generic.html
src/views/: __init__.py  plate.py  remote_item.py
tests/: conftest.py  test.db  test_cell.py  test_compound.py  test_image.py  test_item.py  test_modality.py  test_parser.py  test_plate.py  test_section.py  test_stack.py  test_tag.py  test_timepoint.py
